// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header render 1`] = `
"<header className=\\"launchPanelHeader\\">
  <div className=\\"ms-Grid-row\\">
    <div role=\\"heading\\" aria-level={1} className=\\"ms-Grid-col ms-u-sm10 ms-fontColor-neutralPrimary ms-font-xl old\\">
      title
    </div>
  </div>
  <div className=\\"headerSubtitle ms-fontWeight-semilight ms-fontSize-xs\\">
    sub-title
  </div>
</header>"
`;

exports[`Header render with children prop 1`] = `
"<header className=\\"launchPanelHeader\\">
  <div className=\\"ms-Grid-row\\">
    <div role=\\"heading\\" aria-level={1} className=\\"ms-Grid-col ms-u-sm10 ms-fontColor-neutralPrimary ms-font-xl old\\" />
    <div>
      my content
    </div>
  </div>
  <div className=\\"headerSubtitle ms-fontWeight-semilight ms-fontSize-xs\\" />
</header>"
`;
